# vyu-dev

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  BLUEPRINT.md  CONTRIBUTING.md  DATAFLOW.md  LICENSE  README.md  SESSION.md  package.json  pnpm-lock.yaml  svelte.config.js  tauri-dev-err-2.txt  tauri-dev-err.txt  tauri-dev-out.txt  tsconfig.json  vite.config.js
.codex/environments/: environment.toml
scripts/: dl-ffmpeg.ps1
src/: app.css  app.d.ts  app.html  hooks.client.ts  pdfjs-dist.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: .gitignore
src-tauri/src/: constants.rs  lib.rs  main.rs  types.rs  util.rs  window_state.rs
src-tauri/src/commands/: annotations.rs  clipboard.rs  clips.rs  collections.rs  conversion.rs  database.rs  display.rs  editing.rs  external_apps.rs  file_ops.rs  integrity.rs  mod.rs  thumbnail.rs
src-tauri/src/database/: connection.rs  migrations.rs  mod.rs  models.rs
src/lib/: constants.ts  keybinds.ts  types.ts
src/lib/components/: Controls.svelte  Shell.svelte  TimelineMarkers.svelte  Toast.svelte  ToastStack.svelte  Tooltip.svelte
src/lib/core/: clips.svelte.ts  media.svelte.ts  playback.svelte.ts  slideshow.svelte.ts  timeline.svelte.ts  viewer.svelte.ts
src/lib/services/: clipboard.ts  database.ts  filenameTooltip.ts  files.ts  init.ts  mediaTools.ts  session.ts  storage.ts  thumbnailCache.ts
src/lib/shared/: Controls.svelte  Marquee.svelte  Shell.svelte  Toast.svelte  Tooltip.svelte  constants.ts  file-meta.ts  keybinds.ts  media-kind.ts  pageProps.ts  toast.ts  types.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte  init.ts  page-props.ts
static/: bitcrusher-processor.js  soundtouch-processor.js
(+140 files in other folders)
