[package]
name = "vyu"
version = "0.1.0"
description = "A modern lightweight media viewer for Windows"
authors = ["crz-dev"]
edition = "2021"

[lib]
name = "vyu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
trash = "3"
zip = "2"
image = "0.25"
