[package]
name = "vyu"
version = "0.1.0"
description = "A modern lightweight media viewer for Windows"
authors = ["crz-dev"]
edition = "2021"

[lib]
name = "vyu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "tiff", "avif"] }
base64 = "0.22"
tokio = { version = "1", features = ["sync"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
jpeg-decoder = "0.3"
arboard = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
windows = { version = "0.61", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_Registry",
] }
futures = "0.3.32"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
